# tracer

./: .gitmodules  pyproject.toml
examples/imgui/: 0001-add-tracer-funcs.patch  0001-compile-with-tracer.patch  Justfile  add-tracer.patch  compare.py  environment.yml  run_tests.sh
src/: tracer.cpp  tracer.hpp
src/tools/: cli.py  extract_trace_info.py  parse_trace.py
