[project]
name = "tracer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fnvhash>=0.1.0",
    "pyelftools>=0.31",
]

[project.scripts]
tracer = "tools.cli:main"

[tool.uv]
dev-dependencies = [
    "ipdb>=0.13.13",
    "pytest>=8.3.3",
]

[tool.pyright]
typeCheckingMode = "standard"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

